--- a/Project/Globetrot/Globetrot/Base.lproj/Main.storyboard
+++ b/Project/Globetrot/Globetrot/Base.lproj/Main.storyboard
@@ -77,6 +77,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="searchBar" destination="tZO-eY-1Oa" id="iQC-QV-eAH"/>
                         <outlet property="searchDisplayController" destination="riK-l2-hWV" id="VH3-TW-gP0"/>
                         <segue destination="csE-g6-isg" kind="show" identifier="add_myPlaceToNewPlace" id="ukf-Qp-07V"/>
                     </connections>
@@ -85,7 +86,6 @@
                 <searchDisplayController id="riK-l2-hWV">
                     <connections>
                         <outlet property="delegate" destination="INo-gq-xhf" id="j5m-Eu-ZLj"/>
-                        <outlet property="searchBar" destination="tZO-eY-1Oa" id="Zjt-3d-N1b"/>
                         <outlet property="searchContentsController" destination="INo-gq-xhf" id="Dsx-VH-Sm1"/>
                         <outlet property="searchResultsDataSource" destination="INo-gq-xhf" id="qbb-hh-JU8"/>
                         <outlet property="searchResultsDelegate" destination="INo-gq-xhf" id="v1Q-TO-STJ"/>
