--- a/Project/Globetrot/Globetrot/Base.lproj/Main.storyboard
+++ b/Project/Globetrot/Globetrot/Base.lproj/Main.storyboard
@@ -22,6 +22,10 @@
                             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <textInputTraits key="textInputTraits"/>
+                            <scopeButtonTitles>
+                                <string>Title</string>
+                                <string>Title</string>
+                            </scopeButtonTitles>
                             <connections>
                                 <outlet property="delegate" destination="INo-gq-xhf" id="3Kd-dY-eIq"/>
                             </connections>
