--- a/Android_Project/Milestone_2/Globetrotter/app/src/main/res/layout/activity_new_place_extra.xml
+++ b/Android_Project/Milestone_2/Globetrotter/app/src/main/res/layout/activity_new_place_extra.xml
@@ -27,7 +27,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <Button
-        android:id="@+id/imageButton"
+        android:id="@+id/newPlaceImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
@@ -35,7 +35,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:textAllCaps="false"/>
+        android:textAllCaps="false"
+        android:onClick="newPlaceImageTapped"/>
 
     <EditText
         android:id="@+id/editText"
@@ -46,7 +47,7 @@
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
         android:inputType="text"
-        app:layout_constraintBottom_toTopOf="@+id/imageButton"
+        app:layout_constraintBottom_toTopOf="@+id/newPlaceImage"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
