--- a/Android_Project/Milestone_2/Globetrotter/app/src/main/res/layout/activity_main.xml
+++ b/Android_Project/Milestone_2/Globetrotter/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,16 @@
     android:layout_height="match_parent"
     tools:context="com.example.siddharth.globetrotter.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.514"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
