--- a/Android_Project/Milestone_2/Globetrotter/app/src/main/res/layout/activity_new_place_image.xml
+++ b/Android_Project/Milestone_2/Globetrotter/app/src/main/res/layout/activity_new_place_image.xml
@@ -36,7 +36,8 @@
         app:layout_constraintLeft_toLeftOf="@+id/newPlaceImage"
         app:layout_constraintTop_toBottomOf="@+id/newPlaceImage"
         app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:srcCompat="@mipmap/ic_launcher"
+        android:onClick="cameraButtonTapped"/>
 
     <ImageButton
         android:id="@+id/libraryButton"
@@ -51,5 +52,6 @@
         app:layout_constraintRight_toRightOf="@+id/newPlaceImage"
         app:layout_constraintTop_toBottomOf="@+id/newPlaceImage"
         app:srcCompat="@mipmap/ic_launcher"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="1.0"
+        android:onClick="libraryButtonTapped"/>
 </android.support.constraint.ConstraintLayout>
