--- a/Android_Project/Milestone_2/Globetrotter/app/src/main/res/values/colors.xml
+++ b/Android_Project/Milestone_2/Globetrotter/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#FFA500</color>
+    <color name="colorPrimaryDark">#E59400</color>
+    <color name="colorAccent">#FFAE19</color>
 </resources>
