--- a/Android_Project/Milestone_2/Globetrotter/app/src/main/res/layout/activity_new_place_image.xml
+++ b/Android_Project/Milestone_2/Globetrotter/app/src/main/res/layout/activity_new_place_image.xml
@@ -20,8 +20,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageButton
         android:id="@+id/cameraButton"
@@ -54,4 +53,14 @@
         app:srcCompat="@mipmap/ic_launcher"
         app:layout_constraintVertical_bias="1.0"
         android:onClick="libraryButtonTapped"/>
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/your_image_will_be_displayed_here"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
