--- a/Android_Project/Milestone_3/Globetrotter/app/src/main/res/layout/activity_new_place.xml
+++ b/Android_Project/Milestone_3/Globetrotter/app/src/main/res/layout/activity_new_place.xml
@@ -52,7 +52,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/notes"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
@@ -60,15 +60,15 @@
         android:layout_marginRight="10dp"
         android:layout_marginTop="11dp"
         android:inputType="none"
+        app:layout_constraintBottom_toTopOf="@+id/extraNotesButton"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintBottom_toTopOf="@+id/extraNotes"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/extraNotes"
+        android:id="@+id/extraNotesButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
