--- a/Android_Project/Milestone_3/Globetrotter/app/src/main/res/layout/activity_new_place_extra.xml
+++ b/Android_Project/Milestone_3/Globetrotter/app/src/main/res/layout/activity_new_place_extra.xml
@@ -39,7 +39,7 @@
         android:onClick="newPlaceImageTapped"/>
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/extraNotes"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="10dp"
