--- a/Android_Project/Milestone_3/Globetrotter/app/src/main/res/menu/menu_main.xml
+++ b/Android_Project/Milestone_3/Globetrotter/app/src/main/res/menu/menu_main.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/settings"
+    <item android:id="@+id/save"
         android:title="@string/save"
         app:showAsAction="ifRoom"
         android:textColor="@color/white"/>
